--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,3 +26,17 @@
 header {
     z-index: 1000;
 }
+
+.swiper-container {
+    width: 100%;
+    max-width: 600px; /* Adjust as needed */
+    margin: auto;
+    overflow: hidden; /* Prevents horizontal scrolling */
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain; /* Ensures full image fits */
+}
