--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         var swiper = new Swiper('.swiper-container', {
-            loop: true, // Infinite loop scrolling
+            loop: true,
             autoplay: {
-                delay: 3000, // Auto-slide every 3 seconds
+                delay: 5000,
                 disableOnInteraction: false,
             },
             slidesPerView: 1,
