make header correct

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -3,7 +3,7 @@
         {% for image in include.images %}
         <div class="swiper-slide">
             <div class="swiper-zoom-container">
-                <img src="{{ image }}" alt="Грамота">
+                <img src="{{ image }}" alt="Грамота" loading="lazy">
             </div>
         </div>
         {% endfor %}
