add embedded google drives

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -170,3 +170,18 @@ header {
   opacity: 1;
   visibility: visible;
 }
+
+.red-header {
+  font-size:xx-large;
+  color: red;
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+}
+
+.blue-header {
+  font-size:xx-large;
+  color: blue;
+  font-weight: bold;
+  text-align: center;
+}
