--- a/assets/main.scss
+++ b/assets/main.scss
@@ -185,3 +185,11 @@ header {
   font-weight: bold;
   text-align: center;
 }
+
+.black-header {
+  font-size:x-large;
+}
+
+.margin-bottom {
+  margin-bottom: 20px;
+}
