--- a/assets/main.scss
+++ b/assets/main.scss
@@ -117,7 +117,7 @@ header {
 }
 
 .blue-header {
-  font-size:xx-large;
+  font-size:x-large;
   color: blue;
   font-weight: bold;
   text-align: center;
