--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,7 +85,10 @@ header {
   top: 100%;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   max-width: 300px; // Constrain dropdown width
-  width: 100%;
+}
+
+.site-nav {
+  position: relative;
 }
 
 // Show the dropdown menu when the checkbox is checked
@@ -102,6 +105,11 @@ header {
   text-overflow: ellipsis;
   max-width: 400px; // Adjust as needed
 }
+
+
+
+
+
 .red-header {
   font-size:xx-large;
   color: red;
