--- a/assets/main.scss
+++ b/assets/main.scss
@@ -48,16 +48,25 @@ header {
 .row {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
 }
 
 .column {
-  flex: 50%;
+  flex: 1;
+  min-width: 300px;
 }
 
 @media screen and (max-width: 768px) {
   .column {
     width: 100%;
+    min-width: unset;
   }
+}
+
+.red-header,
+.black-header {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 // Force the hamburger menu to always show
