--- a/assets/main.scss
+++ b/assets/main.scss
@@ -51,6 +51,12 @@ header {
   flex-wrap: wrap;
 }
 
+.row-2 {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
 .column {
   flex: 1;
   min-width: 300px;
@@ -156,6 +162,7 @@ header {
 .drive-wrap {
   display: flex; 
   justify-content: center; 
+  margin-bottom: 10px;
 }
 
 .iframe-container {
